Update images and text

--- a/website/index_raw.html
+++ b/website/index_raw.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2023-05-14T11%3A08%3A14.374Z" rel="stylesheet">
+    <link href="style/style.css?v=2023-05-20T11%3A18%3A34.600Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -135,6 +135,7 @@
                                 <button type="button" data-bs-target="#carousel-chalet" data-bs-slide-to="2" aria-label="Slide 3"></button>
                                 <button type="button" data-bs-target="#carousel-chalet" data-bs-slide-to="3" aria-label="Slide 4"></button>
                                 <button type="button" data-bs-target="#carousel-chalet" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                                <button type="button" data-bs-target="#carousel-chalet" data-bs-slide-to="5" aria-label="Slide 6"></button>
                             </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active" data-bs-interval="10000">
@@ -159,8 +160,14 @@
                                 </div>
                                 <div class="carousel-item">
                                     <picture>
-                                        <source srcset="images/chalet/IMG_3222.webp">
-                                        <img src="images/chalet/IMG_3222.jpg" class="d-block w-100 rounded" alt="Illustration 3">
+                                        <source srcset="images/chalet/IMG_1815.webp">
+                                        <img src="images/chalet/IMG_1815.jpg" class="d-block w-100 rounded" alt="Illustration 3">
+                                    </picture>
+                                </div>
+                                <div class="carousel-item">
+                                    <picture>
+                                        <source srcset="images/chalet/salon.webp">
+                                        <img src="images/chalet/salon.jpg" class="d-block w-100 rounded" alt="Illustration 4">
                                     </picture>
                                 </div>
                                 <div class="carousel-item">
@@ -344,40 +351,58 @@
             <div class="container">
                 <h2>#=(section_photos_title)</h2>
                 <div class="row align-items-start">
-                    <a href="images/gallerie/hotel.jpg" data-toggle="lightbox" data-gallery="example-gallery" data-caption="Le chalet" class="col-12 col-md-6 col-xxl-4 py-2">
+                    <a href="images/gallerie/hotel.jpg" data-toggle="lightbox" data-gallery="example-gallery" data-caption="Le chalet" class="col-12 col-md-6 col-xxl-4 p-2">
                         <picture>
                             <source srcset="images/gallerie/hotel_small.webp">
                             <img src="images/gallerie/hotel_small.jpg" class="img-fluid rounded" alt="Le chalet">
                         </picture>
                     </a>
-                    <a href="images/gallerie/IMG_2564.jpg" data-toggle="lightbox" data-gallery="example-gallery" data-caption="Le restaurant" class="col-12 col-md-6 col-xxl-4 py-2">
+                    <a href="images/gallerie/IMG_2564.jpg" data-toggle="lightbox" data-gallery="example-gallery" data-caption="Le restaurant" class="col-12 col-md-6 col-xxl-4 p-2">
                         <picture>
                             <source srcset="images/gallerie/IMG_2564_small.webp">
                             <img src="images/gallerie/IMG_2564_small.jpg" class="img-fluid rounded" alt="Le restaurant">
                         </picture>
                     </a>
-                    <a href="images/gallerie/bar-hotel-panoramique.jpg" data-toggle="lightbox" data-gallery="example-gallery" data-caption="Le bar" class="col-12 col-md-6 col-xxl-4 py-2">
+                    <a href="images/gallerie/terrasse.jpg" data-toggle="lightbox" data-gallery="example-gallery" data-caption="La terrasse et son panorama" class="col-12 col-md-6 col-xxl-4 p-2">
+                        <picture>
+                            <source srcset="images/gallerie/terrasse_small.webp">
+                            <img src="images/gallerie/terrasse_small.jpg" class="img-fluid rounded" alt="La terrasse">
+                        </picture>
+                    </a>
+                    <a href="images/gallerie/raclette.jpg" data-toggle="lightbox" data-gallery="example-gallery" data-caption="La raclette à la bougie" class="col-12 col-md-6 col-xxl-4 p-2">
+                        <picture>
+                            <source srcset="images/gallerie/raclette_small.webp">
+                            <img src="images/gallerie/raclette_small.jpg" class="img-fluid rounded" alt="La fameuse raclette">
+                        </picture>
+                    </a>
+                    <a href="images/gallerie/bar-hotel-panoramique.jpg" data-toggle="lightbox" data-gallery="example-gallery" data-caption="Le bar" class="col-12 col-md-6 col-xxl-4 p-2">
                         <picture>
                             <source srcset="images/gallerie/bar-hotel-panoramique_small.webp">
                             <img src="images/gallerie/bar-hotel-panoramique_small.jpg" class="img-fluid rounded" alt="Le bar">
                         </picture>
                     </a>
-                    <a href="images/gallerie/montagne-1.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-12 col-md-6 col-xxl-4 py-2">
-                        <picture>
-                            <source srcset="images/gallerie/montagne-1_small.webp">
-                            <img src="images/gallerie/montagne-1_small.jpg" class="img-fluid rounded" alt="Montagne">
-                        </picture>
-                    </a>
-                    <a href="images/gallerie/mizoen-et-lac-chambon.jpg" data-toggle="lightbox" data-gallery="example-gallery" data-caption="Lac Chambon" class="col-12 col-md-6 col-xxl-4 py-2">
+                    <a href="images/gallerie/mizoen-et-lac-chambon.jpg" data-toggle="lightbox" data-gallery="example-gallery" data-caption="Lac Chambon" class="col-12 col-md-6 col-xxl-4 p-2">
                         <picture>
                             <source srcset="images/gallerie/mizoen-et-lac-chambon_small.webp">
                             <img src="images/gallerie/mizoen-et-lac-chambon_small.jpg" class="img-fluid rounded" alt="Lac Chambon">
                         </picture>
                     </a>
-                    <a href="images/gallerie/chamois.jpg" data-toggle="lightbox" data-gallery="example-gallery" data-caption="Chamois" class="col-12 col-md-6 col-xxl-4 py-2">
+                    <a href="images/gallerie/chamois.jpg" data-toggle="lightbox" data-gallery="example-gallery" data-caption="Chamois" class="col-12 col-md-6 col-xxl-4 p-2">
                         <picture>
                             <source srcset="images/gallerie/chamois_small.webp">
                             <img src="images/gallerie/chamois_small.jpg" class="img-fluid rounded" alt="Chamois">
+                        </picture>
+                    </a>
+                    <a href="images/gallerie/lunette.jpg" data-toggle="lightbox" data-gallery="example-gallery" data-caption="Les chamois sont visibles depuis le bar." class="col-12 col-md-6 col-xxl-4 p-2">
+                        <picture>
+                            <source srcset="images/gallerie/lunette_small.webp">
+                            <img src="images/gallerie/lunette_small.jpg" class="img-fluid rounded" alt="Les chamois sont visibles depuis le bar">
+                        </picture>
+                    </a>
+                    <a href="images/gallerie/montagne-1.jpg" data-toggle="lightbox" data-gallery="example-gallery" data-caption="Montagne" class="col-12 col-md-6 col-xxl-4 p-2">
+                        <picture>
+                            <source srcset="images/gallerie/montagne-1_small.webp">
+                            <img src="images/gallerie/montagne-1_small.jpg" class="img-fluid rounded" alt="Montagne">
                         </picture>
                     </a>
                 </div>
@@ -936,7 +961,7 @@
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2023-05-14T11%3A08%3A14.374Z"></script>
+    <script src="script/page.js?v=2023-05-20T11%3A18%3A34.600Z"></script>
 </body>
 
 </html>
