--- a/website/index_raw.html
+++ b/website/index_raw.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2023-05-20T11%3A18%3A34.600Z" rel="stylesheet">
+    <link href="style/style.css?v=2023-06-09T11%3A04%3A25.133Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -20,14 +20,11 @@
     <header style="position:fixed">
         <nav>
             <div class="navbar-container navbar-width d-flex flex-row justify-content-between align-items-center">
-                <div style="width:10em">
+                <div>
                     <a class="navbar-brand" href="javascript:navbar.scrollToElement('site-hero')">
                         <div class="navbar-brand-small">#=(brand_upper)</div>
                         <div class="navbar-brand-big">#=(brand_lower)</div>
                     </a>
-                    <div id="order-bread" class="rounded navbar-button" style="font-size: .75em;">
-                        <a class="navbar-link" href="javascript:new bootstrap.Modal('#modal-order-bread').show()">#=(order_bread)</a>
-                    </div>
                 </div>
 
                 <div id="navbar-items-container">
@@ -624,25 +621,6 @@
         </section>
     </main>
 
-    <div class="modal fade" id="modal-order-bread" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5">#=(order_bread)</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="#=(modal_close)"></button>
-                </div>
-                <div class="modal-body">
-                    <p>
-                        #=(order_bread_not_ready)
-                    </p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">#=(modal_close)</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <div class="modal fade" id="modal-mentions-legales" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -961,7 +939,7 @@
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2023-05-20T11%3A18%3A34.600Z"></script>
+    <script src="script/page.js?v=2023-06-09T11%3A04%3A25.133Z"></script>
 </body>
 
 </html>
