--- a/src/html/index.html
+++ b/src/html/index.html
@@ -583,6 +583,32 @@
         <section id="infos" class="py-5 bg-light">
             <div class="container">
                 <h2>#=(section_infos_title)</h2>
+                <div class="row mt-4 mb-5">
+                    <div class="d-flex flex-wrap my-2 justify-content-center">
+                        <div class="info">
+                            <img class="info-icon" src="images/infos/wifi.svg" width="24" height="24" alt="Icône wifi" />
+                            <span>#=(section_infos_wifi)</span>
+                        </div>
+                        <div class="info">
+                            <img class="info-icon" src="images/infos/parking.svg" width="24" height="24" alt="Icône parking" />
+                            <span>#=(section_infos_parking)</span>
+                        </div>
+                        <div class="info">
+                            <img class="info-icon" src="images/infos/breakfast.svg" width="24" height="24" alt="Icône petit-déjeuner" />
+                            <span>#=(section_infos_breakfast)</span>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-wrap my-2 justify-content-center">
+                        <div class="info">
+                            <img class="info-icon" src="images/infos/no-smoking.svg" width="24" height="24" alt="Icône non-fumeur" />
+                            <span>#=(section_infos_nosmoking)</span>
+                        </div>
+                        <div class="info">
+                            <img class="info-icon" src="images/infos/no-pets.svg" width="24" height="24" alt="Icône pas d'animaux domestiques" />
+                            <span>#=(section_infos_nopets)</span>
+                        </div>
+                    </div>
+                </div>
                 <div class="row mt-4 text-left">
                     <div class="col-12 col-md-6">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11274.69412601057!2d6.133660981910849!3d45.0518464424825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478a1312138fd1ff%3A0xd58cfe25e605f8cd!2sChalet%20Le%20Panoramique!5e0!3m2!1sfr!2sfr!4v1684059250010!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="col-12 rounded" title="Carte" referrerpolicy="no-referrer-when-downgrade"></iframe>
