--- a/website/index_raw.html
+++ b/website/index_raw.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2023-06-09T11%3A08%3A50.393Z" rel="stylesheet">
+    <link href="style/style.css?v=2023-07-26T10%3A49%3A21.059Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -583,6 +583,32 @@
         <section id="infos" class="py-5 bg-light">
             <div class="container">
                 <h2>#=(section_infos_title)</h2>
+                <div class="row mt-4 mb-5">
+                    <div class="d-flex flex-wrap my-2 justify-content-center">
+                        <div class="info">
+                            <img class="info-icon" src="images/infos/wifi.svg" width="24" height="24" alt="Icône wifi" />
+                            <span>#=(section_infos_wifi)</span>
+                        </div>
+                        <div class="info">
+                            <img class="info-icon" src="images/infos/parking.svg" width="24" height="24" alt="Icône parking" />
+                            <span>#=(section_infos_parking)</span>
+                        </div>
+                        <div class="info">
+                            <img class="info-icon" src="images/infos/breakfast.svg" width="24" height="24" alt="Icône petit-déjeuner" />
+                            <span>#=(section_infos_breakfast)</span>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-wrap my-2 justify-content-center">
+                        <div class="info">
+                            <img class="info-icon" src="images/infos/no-smoking.svg" width="24" height="24" alt="Icône non-fumeur" />
+                            <span>#=(section_infos_nosmoking)</span>
+                        </div>
+                        <div class="info">
+                            <img class="info-icon" src="images/infos/no-pets.svg" width="24" height="24" alt="Icône pas d'animaux domestiques" />
+                            <span>#=(section_infos_nopets)</span>
+                        </div>
+                    </div>
+                </div>
                 <div class="row mt-4 text-left">
                     <div class="col-12 col-md-6">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11274.69412601057!2d6.133660981910849!3d45.0518464424825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478a1312138fd1ff%3A0xd58cfe25e605f8cd!2sChalet%20Le%20Panoramique!5e0!3m2!1sfr!2sfr!4v1684059250010!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="col-12 rounded" title="Carte" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -939,7 +965,7 @@
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2023-06-09T11%3A08%3A50.393Z"></script>
+    <script src="script/page.js?v=2023-07-26T10%3A49%3A21.059Z"></script>
 </body>
 
 </html>
