FIx SIRET, TVA numbers + bar schedule

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -668,7 +668,7 @@
                         <span class="px-4 d-inline-block">
                             EURL au capital de 5.000€<br />
                             RCS Grenoble 95174534800015<br />
-                            N° de TVA intracommunautaire : FRxxxxx
+                            N° de TVA intracommunautaire : FR25951745348
                         </span>
                     </p>
 
@@ -895,7 +895,7 @@
 
                     <h5>Responsable du traitement</h5>
                     <p>
-                        Tout traitement des informations personnelles communiquées au Chalet Le Panoramique est effectué sous la responsabilité la société EURL CHALET LE PANORAMIQUE, 227 route d'Emparis, 38142 Mizoën, N° SIRET xxxxxxx.
+                        Tout traitement des informations personnelles communiquées au Chalet Le Panoramique est effectué sous la responsabilité la société EURL CHALET LE PANORAMIQUE, 227 route d'Emparis, 38142 Mizoën, N° SIRET 95174534800015.
                     </p>
                     <p>
                         Pour toute question sur le traitement des données personnelles, ou toute demande d'accès, d'obtention, de portabilité, de rectification ou d'effacement de vos données personnelles, nous vous invitons à contacter me contacter à l'adresse mail : <a href="mailto:etaulier@chalet-lepanoramique.fr">letaulier@chalet-lepanoramique.fr</a>.
