--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2023-07-26T10%3A58%3A09.047Z" rel="stylesheet">
+    <link href="style/style.css?v=2023-10-01T16%3A49%3A55.980Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -352,7 +352,7 @@ Une occasion unique de découvrir des bières de notre région mais aussi des al
 Bien entendu vous trouverez également de la limonade, des jus de fruit, du cola et tant d'autres boissons artisanales.
                             </p>
                             <p>
-                                <b>Bar ouvert de 11h à 14h00 puis de 17h à 20h.</b>
+                                <b>Bar ouvert à partir de 16h.</b>
                             </p>
                         </div>
                     </div>
@@ -703,7 +703,7 @@ Tout comme les activités culturelles, visites guidées ou ateliers artistiques.
                         <span class="px-4 d-inline-block">
                             EURL au capital de 5.000€<br />
                             RCS Grenoble 95174534800015<br />
-                            N° de TVA intracommunautaire : FRxxxxx
+                            N° de TVA intracommunautaire : FR25951745348
                         </span>
                     </p>
 
@@ -930,7 +930,7 @@ Tout comme les activités culturelles, visites guidées ou ateliers artistiques.
 
                     <h5>Responsable du traitement</h5>
                     <p>
-                        Tout traitement des informations personnelles communiquées au Chalet Le Panoramique est effectué sous la responsabilité la société EURL CHALET LE PANORAMIQUE, 227 route d'Emparis, 38142 Mizoën, N° SIRET xxxxxxx.
+                        Tout traitement des informations personnelles communiquées au Chalet Le Panoramique est effectué sous la responsabilité la société EURL CHALET LE PANORAMIQUE, 227 route d'Emparis, 38142 Mizoën, N° SIRET 95174534800015.
                     </p>
                     <p>
                         Pour toute question sur le traitement des données personnelles, ou toute demande d'accès, d'obtention, de portabilité, de rectification ou d'effacement de vos données personnelles, nous vous invitons à contacter me contacter à l'adresse mail : <a href="mailto:etaulier@chalet-lepanoramique.fr">letaulier@chalet-lepanoramique.fr</a>.
@@ -1000,7 +1000,7 @@ Tout comme les activités culturelles, visites guidées ou ateliers artistiques.
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2023-07-26T10%3A58%3A09.047Z"></script>
+    <script src="script/page.js?v=2023-10-01T16%3A49%3A55.980Z"></script>
 </body>
 
 </html>
