--- a/website/index_en.html
+++ b/website/index_en.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2023-10-01T16%3A49%3A55.980Z" rel="stylesheet">
+    <link href="style/style.css?v=2023-10-01T17%3A46%3A20.078Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -135,11 +135,11 @@
                                 <button type="button" data-bs-target="#carousel-chalet" data-bs-slide-to="5" aria-label="Slide 6"></button>
                             </div>
                             <div class="carousel-inner">
-                                <div class="carousel-item active" data-bs-interval="10000">
+                                <div class="carousel-item active" data-bs-interval="5100">
                                     <div class="d-flex flex-column justify-content-center rounded" style="aspect-ratio:4 / 3;background:url('images/chalet/video-background.webp');background-size:cover">
                                         <div class="spinner-border" role="status" style="position: absolute;top: calc(50% - 12px);left: calc(50% - 12px);color: white"> </div>
                                         <video class="rounded w-100" width="100%" muted autoplay style="z-index:1">
-                                            <source src="images/chalet/DJI_0046~1.mp4" type="video/mp4">
+                                            <source src="images/chalet/DJI_0099.mp4" type="video/mp4">
                                         </video>
                                     </div>
                                 </div>
@@ -998,7 +998,7 @@ Just like cultural activities, guided tours or artistic workshops.
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2023-10-01T16%3A49%3A55.980Z"></script>
+    <script src="script/page.js?v=2023-10-01T17%3A46%3A20.078Z"></script>
 </body>
 
 </html>
