Change chalet terrasse picture

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -151,8 +151,8 @@
                                 </div>
                                 <div class="carousel-item">
                                     <picture>
-                                        <source srcset="images/chalet/_DSC5913.webp">
-                                        <img src="images/chalet/_DSC5913.jpg" class="d-block w-100 rounded" alt="Illustration 2">
+                                        <source srcset="images/chalet/terrasse.webp">
+                                        <img src="images/chalet/terrasse.jpg" class="d-block w-100 rounded" alt="Illustration 2">
                                     </picture>
                                 </div>
                                 <div class="carousel-item">
