--- a/website/index_en.html
+++ b/website/index_en.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2023-10-01T17%3A46%3A20.078Z" rel="stylesheet">
+    <link href="style/style.css?v=2023-10-01T17%3A50%3A53.228Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -151,8 +151,8 @@
                                 </div>
                                 <div class="carousel-item">
                                     <picture>
-                                        <source srcset="images/chalet/_DSC5913.webp">
-                                        <img src="images/chalet/_DSC5913.jpg" class="d-block w-100 rounded" alt="Illustration 2">
+                                        <source srcset="images/chalet/terrasse.webp">
+                                        <img src="images/chalet/terrasse.jpg" class="d-block w-100 rounded" alt="Illustration 2">
                                     </picture>
                                 </div>
                                 <div class="carousel-item">
@@ -998,7 +998,7 @@ Just like cultural activities, guided tours or artistic workshops.
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2023-10-01T17%3A46%3A20.078Z"></script>
+    <script src="script/page.js?v=2023-10-01T17%3A50%3A53.228Z"></script>
 </body>
 
 </html>
