--- a/src/html/index.html
+++ b/src/html/index.html
@@ -72,7 +72,7 @@
     </header>
 
     <main>
-        <section id="site-hero" class="d-flex justify-content-between flex-column header-background" style="background-color:#24669D;background-position: center 0px;user-select: none;">
+        <section id="site-hero" class="d-flex justify-content-between flex-column hero-background winter" style="background-position: center 0px;user-select: none;">
             <div id="hero-text" class="container text-white d-flex flex-column">
                 <div id="hero-text-upper" class="text-uppercase d-flex justify-content-between" style="line-height:1em;font-size:.3em;letter-spacing:.15em;padding-left:.2em;padding-right:.2em;z-index:1">
                     <span>#=(hero_upper)</span>
