--- a/src/html/index.html
+++ b/src/html/index.html
@@ -218,6 +218,7 @@
                                     <button type="button" data-bs-target="#carousel-chambre-premium" data-bs-slide-to="1" aria-label="Slide 2"></button>
                                     <button type="button" data-bs-target="#carousel-chambre-premium" data-bs-slide-to="2" aria-label="Slide 3"></button>
                                     <button type="button" data-bs-target="#carousel-chambre-premium" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                                    <button type="button" data-bs-target="#carousel-chambre-premium" data-bs-slide-to="4" aria-label="Slide 5"></button>
                                 </div>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
@@ -242,6 +243,12 @@
                                         <picture>
                                             <source srcset="images/chambres/premium/Sans-titre.webp">
                                             <img src="images/chambres/premium/Sans-titre.jpg" class="d-block w-100 rounded" alt="Illustration 4">
+                                        </picture>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <picture>
+                                            <source srcset="images/chambres/premium/unnamed.webp">
+                                            <img src="images/chambres/premium/unnamed.jpg" class="d-block w-100 rounded" alt="Illustration 5">
                                         </picture>
                                     </div>
                                 </div>
