Fix 2 alpes distance

--- a/website/index_en.html
+++ b/website/index_en.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2023-12-03T18%3A18%3A06.572Z" rel="stylesheet">
+    <link href="style/style.css?v=2024-02-05T08%3A24%3A42.319Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -223,6 +223,7 @@ My only desire: to make your stay in my chalet unforgettable, a unique experienc
                                     <button type="button" data-bs-target="#carousel-chambre-premium" data-bs-slide-to="1" aria-label="Slide 2"></button>
                                     <button type="button" data-bs-target="#carousel-chambre-premium" data-bs-slide-to="2" aria-label="Slide 3"></button>
                                     <button type="button" data-bs-target="#carousel-chambre-premium" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                                    <button type="button" data-bs-target="#carousel-chambre-premium" data-bs-slide-to="4" aria-label="Slide 5"></button>
                                 </div>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
@@ -247,6 +248,12 @@ My only desire: to make your stay in my chalet unforgettable, a unique experienc
                                         <picture>
                                             <source srcset="images/chambres/premium/Sans-titre.webp">
                                             <img src="images/chambres/premium/Sans-titre.jpg" class="d-block w-100 rounded" alt="Illustration 4">
+                                        </picture>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <picture>
+                                            <source srcset="images/chambres/premium/unnamed.webp">
+                                            <img src="images/chambres/premium/unnamed.jpg" class="d-block w-100 rounded" alt="Illustration 5">
                                         </picture>
                                     </div>
                                 </div>
@@ -473,7 +480,7 @@ You may prefer well-being and fitness areas, snowshoe walks, ice skating, tobogg
                             <div class="card-body">
                                 <p>
                                 <ul style="text-align:left">
-                                    <li>Les 2 Alpes at 3 km (200 km of slopes, 2500 m drop thanks to the glacier, permanent snow cover);</li>
+                                    <li>Les 2 Alpes at 10 km (200 km of slopes, 2500 m drop thanks to the glacier, permanent snow cover);</li>
                                     <li>Alpe d'Huez at 15 km (220 km of slopes, 2200 m drop with the 16 km descent of the Pic Blanc by Sarenne);</li>
                                     <li>la Grave-La Meije at 15 km with its summit at 3983 m above sea level;</li>
                                     <li>the domain of Serre Chevalier about 40 minutes drive.</li>
@@ -998,7 +1005,7 @@ Just like cultural activities, guided tours or artistic workshops.
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2023-12-03T18%3A18%3A06.572Z"></script>
+    <script src="script/page.js?v=2024-02-05T08%3A24%3A42.319Z"></script>
 </body>
 
 </html>
