--- a/website/index_raw.html
+++ b/website/index_raw.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2023-12-03T18%3A18%3A06.572Z" rel="stylesheet">
+    <link href="style/style.css?v=2024-02-05T08%3A24%3A42.319Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -218,6 +218,7 @@
                                     <button type="button" data-bs-target="#carousel-chambre-premium" data-bs-slide-to="1" aria-label="Slide 2"></button>
                                     <button type="button" data-bs-target="#carousel-chambre-premium" data-bs-slide-to="2" aria-label="Slide 3"></button>
                                     <button type="button" data-bs-target="#carousel-chambre-premium" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                                    <button type="button" data-bs-target="#carousel-chambre-premium" data-bs-slide-to="4" aria-label="Slide 5"></button>
                                 </div>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
@@ -242,6 +243,12 @@
                                         <picture>
                                             <source srcset="images/chambres/premium/Sans-titre.webp">
                                             <img src="images/chambres/premium/Sans-titre.jpg" class="d-block w-100 rounded" alt="Illustration 4">
+                                        </picture>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <picture>
+                                            <source srcset="images/chambres/premium/unnamed.webp">
+                                            <img src="images/chambres/premium/unnamed.jpg" class="d-block w-100 rounded" alt="Illustration 5">
                                         </picture>
                                     </div>
                                 </div>
@@ -965,7 +972,7 @@
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2023-12-03T18%3A18%3A06.572Z"></script>
+    <script src="script/page.js?v=2024-02-05T08%3A24%3A42.319Z"></script>
 </body>
 
 </html>
