--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2024-02-05T09%3A40%3A53.771Z" rel="stylesheet">
+    <link href="style/style.css?v=2024-02-19T12%3A04%3A13.378Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -110,7 +110,9 @@
                     </div>
                     <div class="p-3 pt-0">
                         <div class="text-center">
-                            <a href="https://chaletlepanoramique.thais-hotel.com/direct-booking/calendar" target="_blank" class="btn btn-primary my-3">Réserver maintenant</a>
+                            <button type="button" class="btn btn-primary my-3" data-bs-toggle="modal" data-bs-target="#modal-booknow">
+                                Réserver maintenant
+                            </button>                            
                         </div>
                         <div>
                             Un peu perdus ? Contactez moi au:  <a href="tel:0476800625">04 76 80 06 25</a> ou par email:  <a href="mailto:contact@chalet-lepanoramique.fr">contact@chalet-lepanoramique.fr</a>.
@@ -984,6 +986,28 @@ Tout comme les activités culturelles, visites guidées ou ateliers artistiques.
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="modal-booknow" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5">Informations importantes avant de réserver</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Les portes de l'établissement sont fermées entre 12h et 16h, et après 22h.</p>
+                    <p>La station des 2 Alpes est à 12 minutes (10 km). Pas de transport à Mizoën, vous devez être véhiculé.</p>
+                    <p>Merci de préciser en commentaire si vous souhaitez 2 lits simples, car par défaut les chambres sont préparées avec un lit double.</p>
+                    <p>Merci de préciser en commentaire votre éventuel régime spécifique, le restaurant proposant un menu unique.</p>
+                    <p>Nous ne pouvons accueillir vos animaux de companie.</p>
+                    <p>L'établissement n'est pas adapté à l'accueil de bébés et jeunes enfants.</p>
+                </div>
+                <div class="modal-footer justify-content-center">
+                    <a href="https://chaletlepanoramique.thais-hotel.com/direct-booking/calendar" target="_blank" class="btn btn-primary my-3">Réserver</a>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer class="py-4 bg-dark text-light text-center">
         <div>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-mentions-legales">
@@ -1007,7 +1031,7 @@ Tout comme les activités culturelles, visites guidées ou ateliers artistiques.
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2024-02-05T09%3A40%3A53.771Z"></script>
+    <script src="script/page.js?v=2024-02-19T12%3A04%3A13.378Z"></script>
 </body>
 
 </html>
